2006-12-06  Chris Burdess  <dog@gnu.org>

	Fixes PR 29264.
	* gnu/xml/stream/XMLStreamWriterImpl.java: Allow arbitrary text in
	  writeDTD method.

2006-12-06  Chris Burdess  <dog@gnu.org>

	Fixes PR 28816.
	* javax/xml/validation/SchemaFactory.java: Use correct algorithm to
	  discover schema factory implementation class.

2006-12-05  Roman Kennke  <kennke@aicas.com>

	* gnu/java/awt/peer/gtk/AsyncImage.java
	(Loader.run): Nullify observers after loading.
	(observers): Made package private.
	(addObserver): Check for null observers field. Create local
	variable for thread safety.
	(getHeight): Use addObserver() for checking state of field
	and notifying observer when necessary.
	(getWidth): Use addObserver() for checking state of field
	and notifying observer when necessary.
	(getProperty): Use addObserver() for checking state of field
	and notifying observer when necessary.
	(notifyObservers): Check for null observers field. Create local
	variable for thread safety.

2006-12-05  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/html/HTMLEditorKit.java
	(HTMLFactory.create): Removed debug output.
	* javax/swing/text/html/InlineView.java
	(getBreakWeight): Likewise.
	* javax/swing/text/html/StyleSheet.java
	(addRule): Likewise.
	(ListPainter.paint): Removed debug output.

2006-12-05  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/html/BlockView.java
	(painter): Made package visible.
	* javax/swing/text/html/StyleSheet.java
	(translateBorder): New helper method.
	(translateHTMLToCSS): Add mappings for border attributes.
	* javax/swing/text/html/TableView.java
	Made class subclass of BlockView to get CSS goodness.
	(CellView.rowSpan): New field.
	(CellView.setPropertiesFromAttributes): Fetch rowspan.
	(RowView.overlap): New field.
	(RowView.rowIndex): New field.
	(RowView.layoutMajorAxis): Skip overlapping cells.
	(RowView.layoutMinorAxis): Layout cells that span more than 1 row.
	(numColumns): New field.
	(tmpRect): New field.